--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -51,6 +51,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_Canvas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_Canvas.Designer.cs">
+      <DependentUpon>f_Canvas.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_Screen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_Canvas.resx">
+      <DependentUpon>f_Canvas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_Screen.resx">
       <DependentUpon>f_Screen.cs</DependentUpon>
