--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -1,6 +1,63 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="WolfPaw_ScreenSnip.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <WolfPaw_ScreenSnip.Properties.Settings>
+            <setting name="s_hasBgColor" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="s_bgColor" serializeAs="String">
+                <value>White</value>
+            </setting>
+            <setting name="s_hasBorder" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="s_borderWidth" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="s_borderColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="s_drawColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="s_font" serializeAs="String">
+                <value>Arial, 14.25pt</value>
+            </setting>
+            <setting name="s_textColor" serializeAs="String">
+                <value>Black</value>
+            </setting>
+            <setting name="s_lastTool" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="s_lastSaveDir" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="s_hasDelay" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="s_delayLength" serializeAs="String">
+                <value>3000</value>
+            </setting>
+            <setting name="s_lastSaveFormat" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="s_g_SmoothingMode" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="s_g_InterpolationMode" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="s_g_PixelOffsetMode" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </WolfPaw_ScreenSnip.Properties.Settings>
+    </userSettings>
 </configuration>
