--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="c_returnGraphicSettings.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +64,12 @@
     <Compile Include="f_Screen.Designer.cs">
       <DependentUpon>f_Screen.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_SettingPanel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_SettingPanel.Designer.cs">
+      <DependentUpon>f_SettingPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="uc_CutoutHolder.cs">
@@ -79,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_Screen.resx">
       <DependentUpon>f_Screen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_SettingPanel.resx">
+      <DependentUpon>f_SettingPanel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
