--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -50,13 +50,19 @@
                 <value>0</value>
             </setting>
             <setting name="s_g_SmoothingMode" serializeAs="String">
-                <value>3</value>
+                <value>0</value>
             </setting>
             <setting name="s_g_InterpolationMode" serializeAs="String">
-                <value>3</value>
+                <value>0</value>
             </setting>
             <setting name="s_g_PixelOffsetMode" serializeAs="String">
-                <value>3</value>
+                <value>0</value>
+            </setting>
+            <setting name="s_Background" serializeAs="String">
+                <value>255, 192, 192</value>
+            </setting>
+            <setting name="s_Client" serializeAs="String">
+                <value>outlook</value>
             </setting>
         </WolfPaw_ScreenSnip.Properties.Settings>
     </userSettings>
