--- a/WolfPaw ScreenSnip/Properties/Settings.settings
+++ b/WolfPaw ScreenSnip/Properties/Settings.settings
@@ -42,13 +42,19 @@
       <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="s_g_SmoothingMode" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">3</Value>
+      <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="s_g_InterpolationMode" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">3</Value>
+      <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="s_g_PixelOffsetMode" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">3</Value>
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="s_Background" Type="System.Drawing.Color" Scope="User">
+      <Value Profile="(Default)">255, 192, 192</Value>
+    </Setting>
+    <Setting Name="s_Client" Type="System.String" Scope="User">
+      <Value Profile="(Default)">outlook</Value>
     </Setting>
   </Settings>
 </SettingsFile>
