--- a/WolfPaw ScreenSnip/Properties/Settings.settings
+++ b/WolfPaw ScreenSnip/Properties/Settings.settings
@@ -50,5 +50,11 @@
     <Setting Name="s_g_PixelOffsetMode" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">3</Value>
     </Setting>
+    <Setting Name="s_BACKCOLOR" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="s_SaveHasDateTime" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
