--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -58,6 +58,12 @@
             <setting name="s_g_PixelOffsetMode" serializeAs="String">
                 <value>3</value>
             </setting>
+            <setting name="s_BACKCOLOR" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="s_SaveHasDateTime" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WolfPaw_ScreenSnip.Properties.Settings>
     </userSettings>
 </configuration>
