--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -77,6 +77,12 @@
     <Compile Include="f_SettingPanel.Designer.cs">
       <DependentUpon>f_SettingPanel.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_TCP.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_TCP.Designer.cs">
+      <DependentUpon>f_TCP.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="uc_CutoutHolder.cs">
@@ -99,6 +105,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_SettingPanel.resx">
       <DependentUpon>f_SettingPanel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_TCP.resx">
+      <DependentUpon>f_TCP.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -176,6 +185,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\transparentBG.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\full_screen.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\up.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\down.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\save_20.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\clipboard_20.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
