--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -64,6 +64,12 @@
             <setting name="s_SaveHasDateTime" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="s_BaseDelay" serializeAs="String">
+                <value>200</value>
+            </setting>
+            <setting name="s_Delay" serializeAs="String">
+                <value>0</value>
+            </setting>
         </WolfPaw_ScreenSnip.Properties.Settings>
     </userSettings>
 </configuration>
