--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -70,6 +70,12 @@
             <setting name="s_Delay" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="s_HighHandle" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="s_ClearRequireAuth" serializeAs="String">
+                <value>False</value>
+            </setting>
         </WolfPaw_ScreenSnip.Properties.Settings>
     </userSettings>
 </configuration>
