--- a/WolfPaw ScreenSnip/Properties/Settings.settings
+++ b/WolfPaw ScreenSnip/Properties/Settings.settings
@@ -62,5 +62,11 @@
     <Setting Name="s_Delay" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="s_HighHandle" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="s_ClearRequireAuth" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
