--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -67,6 +67,12 @@
     <Compile Include="f_Preview.Designer.cs">
       <DependentUpon>f_Preview.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_PrintSetup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_PrintSetup.Designer.cs">
+      <DependentUpon>f_PrintSetup.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_Screen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -101,6 +107,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_Preview.resx">
       <DependentUpon>f_Preview.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_PrintSetup.resx">
+      <DependentUpon>f_PrintSetup.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_Screen.resx">
       <DependentUpon>f_Screen.cs</DependentUpon>
@@ -202,6 +211,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\clipboard_20.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\handle_tall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\handle2_tall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\printer_32.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\printer_16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\printer_16_2.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
