--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -76,6 +76,9 @@
             <setting name="s_ClearRequireAuth" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="s_UseCleanButtons" serializeAs="String">
+                <value>True</value>
+            </setting>
         </WolfPaw_ScreenSnip.Properties.Settings>
     </userSettings>
 </configuration>
