--- a/WolfPaw ScreenSnip/Properties/Settings.settings
+++ b/WolfPaw ScreenSnip/Properties/Settings.settings
@@ -68,5 +68,8 @@
     <Setting Name="s_ClearRequireAuth" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="s_UseCleanButtons" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
