--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -1,84 +1,103 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="WolfPaw_ScreenSnip.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-    <userSettings>
-        <WolfPaw_ScreenSnip.Properties.Settings>
-            <setting name="s_hasBgColor" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="s_bgColor" serializeAs="String">
-                <value>White</value>
-            </setting>
-            <setting name="s_hasBorder" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="s_borderWidth" serializeAs="String">
-                <value>10</value>
-            </setting>
-            <setting name="s_borderColor" serializeAs="String">
-                <value>Black</value>
-            </setting>
-            <setting name="s_drawColor" serializeAs="String">
-                <value>Black</value>
-            </setting>
-            <setting name="s_font" serializeAs="String">
-                <value>Arial, 14.25pt</value>
-            </setting>
-            <setting name="s_textColor" serializeAs="String">
-                <value>Black</value>
-            </setting>
-            <setting name="s_lastTool" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="s_lastSaveDir" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="s_hasDelay" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="s_delayLength" serializeAs="String">
-                <value>3000</value>
-            </setting>
-            <setting name="s_lastSaveFormat" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="s_g_SmoothingMode" serializeAs="String">
-                <value>3</value>
-            </setting>
-            <setting name="s_g_InterpolationMode" serializeAs="String">
-                <value>3</value>
-            </setting>
-            <setting name="s_g_PixelOffsetMode" serializeAs="String">
-                <value>3</value>
-            </setting>
-            <setting name="s_BACKCOLOR" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="s_SaveHasDateTime" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="s_BaseDelay" serializeAs="String">
-                <value>200</value>
-            </setting>
-            <setting name="s_Delay" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="s_HighHandle" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="s_ClearRequireAuth" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="s_UseCleanButtons" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </WolfPaw_ScreenSnip.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="WolfPaw_ScreenSnip.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <userSettings>
+    <WolfPaw_ScreenSnip.Properties.Settings>
+      <setting name="s_hasBgColor" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_bgColor" serializeAs="String">
+        <value>White</value>
+      </setting>
+      <setting name="s_hasBorder" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_borderWidth" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="s_borderColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_drawColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_font" serializeAs="String">
+        <value>Arial, 14.25pt</value>
+      </setting>
+      <setting name="s_textColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_lastTool" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_lastSaveDir" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="s_hasDelay" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_delayLength" serializeAs="String">
+        <value>3000</value>
+      </setting>
+      <setting name="s_lastSaveFormat" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_g_SmoothingMode" serializeAs="String">
+        <value>3</value>
+      </setting>
+      <setting name="s_g_InterpolationMode" serializeAs="String">
+        <value>3</value>
+      </setting>
+      <setting name="s_g_PixelOffsetMode" serializeAs="String">
+        <value>3</value>
+      </setting>
+      <setting name="s_BACKCOLOR" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="s_SaveHasDateTime" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_BaseDelay" serializeAs="String">
+        <value>200</value>
+      </setting>
+      <setting name="s_Delay" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_HighHandle" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_ClearRequireAuth" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_UseCleanButtons" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </WolfPaw_ScreenSnip.Properties.Settings>
+  </userSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v11.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+    </providers>
+  </entityFramework>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+    <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
+  </system.data>
 </configuration>
