--- a/WolfPaw ScreenSnip/packages.config
+++ b/WolfPaw ScreenSnip/packages.config
@@ -1,4 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net45" />
   <package id="FontAwesome.Sharp" version="4.7.0" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.105.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.EF6" version="1.0.105.2" targetFramework="net45" />
+  <package id="System.Data.SQLite.Linq" version="1.0.105.2" targetFramework="net45" />
 </packages>
