--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="WolfPaw_ScreenSnip.Properties.tagLog" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="WolfPaw_ScreenSnip.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -11,6 +12,14 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <userSettings>
+    <WolfPaw_ScreenSnip.Properties.tagLog>
+      <setting name="LOG" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema" />
+        </value>
+      </setting>
+    </WolfPaw_ScreenSnip.Properties.tagLog>
     <WolfPaw_ScreenSnip.Properties.Settings>
       <setting name="s_hasBgColor" serializeAs="String">
         <value>False</value>
@@ -80,6 +89,9 @@
       </setting>
       <setting name="s_UseCleanButtons" serializeAs="String">
         <value>True</value>
+      </setting>
+      <setting name="s_DBFileLocation" serializeAs="String">
+        <value>%this%\db.sqlite</value>
       </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
