--- a/WolfPaw ScreenSnip/Properties/Settings.settings
+++ b/WolfPaw ScreenSnip/Properties/Settings.settings
@@ -71,5 +71,8 @@
     <Setting Name="s_UseCleanButtons" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="s_DBFileLocation" Type="System.String" Scope="User">
+      <Value Profile="(Default)">%this%\db.sqlite</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
