--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -93,6 +93,12 @@
       <setting name="s_DBFileLocation" serializeAs="String">
         <value>%this%\db.sqlite</value>
       </setting>
+      <setting name="s_ButtonSize" serializeAs="String">
+        <value>40</value>
+      </setting>
+      <setting name="s_HandleSize" serializeAs="String">
+        <value>20</value>
+      </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
   <entityFramework>
