--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -317,6 +317,33 @@
   <ItemGroup>
     <None Include="Resources\histogram_dll.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimize_black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimize_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rollup_black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rollup_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rolldown_black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rolldown_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\questionmark_black.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\questionmark_white.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\screen.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.2\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.2\build\net45\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
