Added fixes to screen and toolbars

--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -99,6 +99,9 @@
       <setting name="s_HandleSize" serializeAs="String">
         <value>20</value>
       </setting>
+      <setting name="s_ToolbarPanel" serializeAs="String">
+        <value>0</value>
+      </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
   <entityFramework>
