Added handling of printScreen button Fixed flickering issues Fixed resize to fit Also made code more lightweight for lower end computers !!Still need to add controls Also needs more streamlining! Add option to move it down to toolbox use with ctrl+f1 or similar Add option to modify snippets Add option to capture windows Add option to use free hand selection when cutting Options still not added!

--- a/WolfPaw ScreenSnip/Properties/Settings.settings
+++ b/WolfPaw ScreenSnip/Properties/Settings.settings
@@ -83,5 +83,14 @@
     <Setting Name="s_ToolbarPanel" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="s_InvalidateTools" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="s_handlePrintScreen" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="s_MoveToTools" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
