--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -102,6 +102,15 @@
       <setting name="s_ToolbarPanel" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="s_InvalidateTools" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="s_handlePrintScreen" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="s_MoveToTools" serializeAs="String">
+        <value>False</value>
+      </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
   <entityFramework>
