Small fixes Started adding Notify Icon mode Add CTRL + F1

--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -109,7 +109,7 @@
         <value>True</value>
       </setting>
       <setting name="s_MoveToTools" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
