--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -77,7 +77,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="c_Converter.cs" />
@@ -165,6 +167,15 @@
     <Compile Include="uc_CutoutHolder.Designer.cs">
       <DependentUpon>uc_CutoutHolder.cs</DependentUpon>
     </Compile>
+    <Compile Include="uc_EditLayer.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="uc_EditLayer.Designer.cs">
+      <DependentUpon>uc_EditLayer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="uc_WpfEditLayer.xaml.cs">
+      <DependentUpon>uc_WpfEditLayer.xaml</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -210,6 +221,9 @@
     </Compile>
     <EmbeddedResource Include="uc_CutoutHolder.resx">
       <DependentUpon>uc_CutoutHolder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="uc_EditLayer.resx">
+      <DependentUpon>uc_EditLayer.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -348,6 +362,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\resize_handle.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="uc_WpfEditLayer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.105.2\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.105.2\build\net45\System.Data.SQLite.Core.targets')" />
