started fixing line segments it's not going great...
wpfeditlayer ln: 163

--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -84,6 +84,7 @@
   <ItemGroup>
     <Compile Include="c_Converter.cs" />
     <Compile Include="c_DatabaseHandler.cs" />
+    <Compile Include="c_DrawnPoints.cs" />
     <Compile Include="c_ImgGen.cs" />
     <Compile Include="c_KeyboardHook.cs" />
     <Compile Include="c_Object.cs" />
