--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -114,6 +114,12 @@
     <Compile Include="f_Preview.Designer.cs">
       <DependentUpon>f_Preview.cs</DependentUpon>
     </Compile>
+    <Compile Include="f_previewWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="f_previewWindow.Designer.cs">
+      <DependentUpon>f_previewWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="f_PrintSetup.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -189,6 +195,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_Preview.resx">
       <DependentUpon>f_Preview.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_previewWindow.resx">
+      <DependentUpon>f_previewWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_PrintSetup.resx">
       <DependentUpon>f_PrintSetup.cs</DependentUpon>
