--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -111,6 +111,21 @@
       <setting name="s_MoveToTools" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="s_CanvasTransparency" serializeAs="String">
+        <value>0.5</value>
+      </setting>
+      <setting name="s_CanvasColor" serializeAs="String">
+        <value>Silver</value>
+      </setting>
+      <setting name="s_RememberLastPosition" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_LastPosition" serializeAs="String">
+        <value>0, 0</value>
+      </setting>
+      <setting name="s_LastUsedMode" serializeAs="String">
+        <value>0</value>
+      </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
   <entityFramework>
