Added buttons to panel Cleaned up some code Managed button rendering Refactored some code into c_RenderHandler.cs Next: • Manage clicking buttons • Manage resizing • Manage layer switching

--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -109,7 +109,7 @@
         <value>True</value>
       </setting>
       <setting name="s_MoveToTools" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="s_CanvasTransparency" serializeAs="String">
         <value>0.5</value>
@@ -124,6 +124,27 @@
         <value>0, 0</value>
       </setting>
       <setting name="s_LastUsedMode" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="s_HandleShortcuts" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_ScreenBGColor" serializeAs="String">
+        <value>Gainsboro</value>
+      </setting>
+      <setting name="s_CutoutPanelColor" serializeAs="String">
+        <value>ActiveCaption</value>
+      </setting>
+      <setting name="s_CutoutSelectionColor" serializeAs="String">
+        <value>Black</value>
+      </setting>
+      <setting name="s_CutoutMouseOverColor" serializeAs="String">
+        <value>180, 180, 180</value>
+      </setting>
+      <setting name="s_ShowPreview" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="s_LastPreviewMode" serializeAs="String">
         <value>0</value>
       </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
