--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -144,6 +144,9 @@
       <setting name="s_LastPreviewMode" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="s_AddDateToSaveFileName" serializeAs="String">
+        <value>False</value>
+      </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
   <entityFramework>
