Fixed bug with magnetic lassoo Added dragaround mode for small screen support Cleaned up magnetic lasso methods Added invalidate to imageholder dispose Fixed bug in imageholder dispose Fixed clean screen button added delete to remove unneeded images from screen

--- a/WolfPaw ScreenSnip/Properties/Settings.settings
+++ b/WolfPaw ScreenSnip/Properties/Settings.settings
@@ -128,5 +128,14 @@
     <Setting Name="s_AddDateToSaveFileName" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="s_AllowDragaround" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="s_DragaroundX" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="s_DragaroundY" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
