--- a/WolfPaw ScreenSnip/App.config
+++ b/WolfPaw ScreenSnip/App.config
@@ -147,6 +147,15 @@
       <setting name="s_AddDateToSaveFileName" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="s_AllowDragaround" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="s_DragaroundX" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="s_DragaroundY" serializeAs="String">
+        <value>True</value>
+      </setting>
     </WolfPaw_ScreenSnip.Properties.Settings>
   </userSettings>
   <entityFramework>
