--- a/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
+++ b/WolfPaw ScreenSnip/WolfPaw ScreenSnip.csproj
@@ -90,6 +90,7 @@
     <Compile Include="c_ImgGen.cs" />
     <Compile Include="c_KeyboardHook.cs" />
     <Compile Include="c_Object.cs" />
+    <Compile Include="c_PointStorage.cs" />
     <Compile Include="c_RenderHandler.cs" />
     <Compile Include="c_returnGraphicSettings.cs" />
     <Compile Include="c_WindingFunctions.cs" />
